# vuff

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release-please-config.json  vuff.toml.example
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/svfmt/: Cargo.toml
crates/svfmt/src/: main.rs
crates/svfmt_config/: Cargo.toml
crates/svfmt_diagnostics/: Cargo.toml
crates/svfmt_diagnostics/src/: lib.rs
crates/svfmt_formatter/: Cargo.toml
crates/svfmt_formatter/src/: lib.rs
crates/svfmt_linter/: Cargo.toml
crates/svfmt_linter/src/: lib.rs
crates/svfmt_server/: Cargo.toml
crates/svfmt_sv_ast/: Cargo.toml
crates/svfmt_sv_ast/src/: lib.rs
crates/svfmt_sv_formatter/: Cargo.toml
crates/svfmt_sv_formatter/src/: context.rs  directives.rs  indent_map.rs  lib.rs  verbatim.rs
crates/svfmt_sv_formatter/src/attribute/: spans.rs
crates/svfmt_sv_formatter/src/expr/: assignment_pattern.rs  call_paren.rs  concat.rs  conditional.rs  mod.rs  select.rs
crates/svfmt_sv_formatter/src/list/: instance_paren.rs  param_assign.rs  port_align.rs  port_align_render.rs  port_paren.rs
crates/svfmt_sv_formatter/src/module/: module_declaration.rs  spans.rs
crates/svfmt_sv_formatter/src/source_text/: mod.rs  root.rs
crates/svfmt_sv_formatter/src/stmt/: boundaries.rs  control_paren.rs  seq_block.rs
crates/svfmt_sv_formatter/src/tokens/: delimiters.rs  trivia.rs
crates/svfmt_sv_formatter/tests/: fixture_snapshots.rs  golden.rs
crates/svfmt_sv_formatter/tests/snapshots/: fixture_snapshots__formatted@01_empty_comments_only.snap  fixture_snapshots__formatted@02_minimal_module.snap  fixture_snapshots__formatted@03_ansi_ports_short.snap  fixture_snapshots__formatted@04_always_ff.snap  fixture_snapshots__formatted@05_case_default.snap  fixture_snapshots__formatted@06_nested_if.snap  fixture_snapshots__formatted@07_long_ternary.snap  fixture_snapshots__formatted@08_parameters.snap  fixture_snapshots__formatted@09_mixed_comments.snap  fixture_snapshots__formatted@10_tabs_config.snap  fixture_snapshots__formatted@11_generate.snap
crates/svfmt_workspace/: Cargo.toml
crates/vuff/: Cargo.toml
crates/vuff/src/: main.rs
crates/vuff_config/: Cargo.toml
crates/vuff_config/src/: lib.rs
crates/vuff_diagnostics/: Cargo.toml
crates/vuff_diagnostics/src/: lib.rs
crates/vuff_formatter/: Cargo.toml
crates/vuff_formatter/src/: lib.rs
crates/vuff_linter/: Cargo.toml
crates/vuff_linter/src/: lib.rs
crates/vuff_server/: Cargo.toml
crates/vuff_server/src/: backend.rs  lib.rs
crates/vuff_sv_ast/: Cargo.toml
crates/vuff_sv_ast/src/: lib.rs
crates/vuff_sv_formatter/: Cargo.toml
crates/vuff_sv_formatter/src/: context.rs  directives.rs  format_ext.rs  indent_map.rs  lib.rs  trivia.rs  verbatim.rs
crates/vuff_sv_formatter/src/attribute/: mod.rs  spans.rs
crates/vuff_sv_formatter/src/expr/: assignment_pattern.rs  call_paren.rs  concat.rs  conditional.rs  macro_calls.rs  mod.rs  select.rs  streaming.rs  ternary_chain.rs
crates/vuff_sv_formatter/src/list/: inst_port_list.rs  instance_paren.rs  mod.rs  param_assign.rs  param_port_list.rs  port_align.rs  port_align_render.rs  port_paren.rs  wrap_mask.rs
crates/vuff_sv_formatter/src/module/: mod.rs  module_declaration.rs  spans.rs
crates/vuff_sv_formatter/src/source_text/: root.rs
crates/vuff_sv_formatter/src/stmt/: boundaries.rs  control_paren.rs  mod.rs  reset_mask.rs  seq_block.rs
crates/vuff_sv_formatter/src/tokens/: delimiters.rs  mod.rs  spacing.rs  trivia.rs
crates/vuff_sv_formatter/tests/: fixture_snapshots.rs  golden.rs
crates/vuff_sv_formatter/tests/snapshots/: fixture_snapshots__formatted@01_empty_comments_only.snap  fixture_snapshots__formatted@02_minimal_module.snap  fixture_snapshots__formatted@03_ansi_ports_short.snap  fixture_snapshots__formatted@04_always_ff.snap  fixture_snapshots__formatted@05_case_default.snap  fixture_snapshots__formatted@06_nested_if.snap  fixture_snapshots__formatted@07_long_ternary.snap  fixture_snapshots__formatted@08_parameters.snap  fixture_snapshots__formatted@09_mixed_comments.snap  fixture_snapshots__formatted@10_tabs_config.snap  fixture_snapshots__formatted@11_generate.snap  fixture_snapshots__formatted@12_picorv32_directives.snap
crates/vuff_workspace/: Cargo.toml
crates/vuff_workspace/src/: lib.rs
docs/: spec-tracker.md
examples/: hello.sv  messy.sv
scripts/: corpus.sh  vuff-pre-commit
tests/fixtures/01_empty_comments_only/: input.sv
tests/fixtures/03_ansi_ports_short/: input.sv
tests/fixtures/04_always_ff/: input.sv
tests/fixtures/05_case_default/: input.sv
tests/fixtures/06_nested_if/: input.sv
tests/fixtures/07_long_ternary/: input.sv
tests/fixtures/08_parameters/: input.sv
tests/fixtures/09_mixed_comments/: input.sv
tests/fixtures/10_tabs_config/: .svlint.toml  input.sv  vuff.toml
tests/fixtures/11_generate/: input.sv
tests/fixtures/12_picorv32_directives/: input.sv  vuff.toml
tests/golden/: 01_basic_spacing.sv  02_module_indent_default.sv  03_indent_width_4.sv  04_indent_tabs.sv  05_blank_line_collapse.sv  06_trailing_ws_strip.sv  07_trailing_blanks.sv  08_begin_end_kr.sv  09_begin_allman.sv  100_decl_simple_net.sv  101_decl_packed_vector.sv  102_decl_multi_name_list.sv  103_decl_with_init.sv  104_decl_signed_typedef.sv  105_decl_indent4.sv  106_call_system_task.sv  107_call_user_function.sv  108_call_method_chain.sv  109_call_indent4.sv  10_always_ff.sv  110_concat_simple.sv  111_primary_unsized.sv  112_unpacked_dims.sv  113_inside_expression.sv  114_gate_primitives.sv  115_param_module_decl.sv  116_inst_simple_short.sv  117_inst_named_param.sv  118_inst_indent4.sv  119_function_body_indent.sv  11_case_statement.sv  120_task_body_indent.sv  121_block_item_decl_indent.sv  122_function_indent4.sv  123_generate_if.sv  124_generate_for.sv  125_generate_simple_assign.sv  126_generate_indent4.sv  127_comment_inline_block.sv  128_comment_block_multiline.sv  (+118 more)
