[workspace]
resolver = "2"
members = [
    "crates/vuff",
    "crates/vuff_formatter",
    "crates/vuff_sv_ast",
    "crates/vuff_sv_formatter",
    "crates/vuff_config",
    "crates/vuff_diagnostics",
    "crates/vuff_workspace",
    "crates/vuff_linter",
    "crates/vuff_server",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/KelvinChung2000/vuff"

[workspace.dependencies]
vuff_formatter = { path = "crates/vuff_formatter" }
vuff_sv_ast = { path = "crates/vuff_sv_ast" }
vuff_sv_formatter = { path = "crates/vuff_sv_formatter" }
vuff_config = { path = "crates/vuff_config" }
vuff_diagnostics = { path = "crates/vuff_diagnostics" }
vuff_workspace = { path = "crates/vuff_workspace" }
vuff_linter = { path = "crates/vuff_linter" }
vuff_server = { path = "crates/vuff_server" }

sv-parser = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
ignore = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
trivially_copy_pass_by_ref = "allow"
needless_pass_by_value = "allow"
ignored_unit_patterns = "allow"
