[package]
name = "svfmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "svfmt"
path = "src/main.rs"

[dependencies]
svfmt_sv_formatter.workspace = true
svfmt_config.workspace = true
svfmt_diagnostics.workspace = true
svfmt_workspace.workspace = true
clap.workspace = true
anyhow.workspace = true
ignore.workspace = true
similar = "2"

[lints]
workspace = true
