[package]
name = "svfmt_config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
svfmt_diagnostics.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
