[package]
name = "svfmt_sv_formatter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
svfmt_formatter.workspace = true
svfmt_sv_ast.workspace = true
svfmt_config.workspace = true
svfmt_diagnostics.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
toml.workspace = true

[lints]
workspace = true
