[package]
name = "vuff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vuff"
path = "src/main.rs"

[dependencies]
vuff_sv_formatter.workspace = true
vuff_config.workspace = true
vuff_diagnostics.workspace = true
vuff_workspace.workspace = true
clap.workspace = true
anyhow.workspace = true
ignore.workspace = true
similar = "2"

[lints]
workspace = true
