[package]
name = "vuff_linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
svlint.workspace = true
thiserror.workspace = true
toml.workspace = true
vuff_config.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
